force-app/main/default/objects/custom_create329__c/custom_create329__c.object-meta.xml
<CustomObject>
    <label>Custom created object329</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects329</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>