force-app/main/default/objects/custom_create329__c/fields/custom_create_329field636__c.field-meta.xml
<CustomField>
    <fullName>custom_create_329field636__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 329field636</label>
    <type>Checkbox</type>
</CustomField>